--- a/sass/directory/base/_base.scss
+++ b/sass/directory/base/_base.scss
@@ -44,4 +44,13 @@ a:active {
   min-width: 320px;
   z-index: 1;
   overflow: hidden;
+  position: relative;
 }
+
+/* * {
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+} */
