--- a/sass/directory/pages/_acceuil.scss
+++ b/sass/directory/pages/_acceuil.scss
@@ -6,6 +6,7 @@
   z-index: 10;
   background-color: #fff;
   position: absolute;
+  -webkit-animation: load-page 5s ease;
   animation: load-page 5s ease;
 }
 
@@ -16,7 +17,8 @@
   overflow: hidden;
   position: relative;
   border: 4px solid $tertiary-color;
-  top: 45%;
+  top: 20%;
+  -webkit-animation: loader 2s ease-in-out;
   animation: loader 2s ease-in-out;
 }
 
@@ -26,6 +28,7 @@
   display: inline-block;
   width: 100%;
   /* background-color: $primary-color; */
+  -webkit-animation: loader-inner 3s ease-in;
   animation: loader-inner 3s ease-in;
 }
 
