--- a/sass/directory/component/_keyframes.scss
+++ b/sass/directory/component/_keyframes.scss
@@ -4,6 +4,16 @@
   }
 }
 
+/* @-webkit-keyframes fullHeart {
+  0% {
+    transform: opacity(0);
+  }
+
+  100% {
+    transform: opacity(1);
+  }
+} */
+
 @keyframes fullHeart {
   0% {
     opacity: 0;
@@ -13,7 +23,6 @@
     opacity: 1;
   }
 }
-
 @keyframes fa-effet {
   100% {
     transform: rotate(1turn);
@@ -46,6 +55,7 @@
     bottom: 0;
   }
 }
+
 @keyframes -delay1 {
   from {
     opacity: 0;
@@ -84,7 +94,7 @@
   }
 }
 
-@-webkit-keyframes loader-inner {
+/* @-webkit-keyframes loader-inner {
   0% {
     height: 0%;
   }
@@ -100,7 +110,7 @@
   75% {
     height: 100%;
   }
-}
+} */
 
 @keyframes load-page {
   0% {
@@ -115,9 +125,10 @@
   }
   100% {
     opacity: 0;
+    display: none;
   }
 }
-@-webkit-keyframes load-page {
+/* @-webkit-keyframes load-page {
   0% {
     margin-left: 0;
     opacity: 100%;
@@ -131,7 +142,7 @@
   100% {
     opacity: 0;
   }
-}
+} */
 
 @keyframes loader {
   0% {
@@ -153,7 +164,7 @@
   }
 }
 
-@-webkit-keyframes loader {
+/* @-webkit-keyframes loader {
   0% {
     transform: rotate(2turn);
     height: 0;
@@ -171,3 +182,4 @@
     height: 200px;
   }
 }
+ */
